--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
       "supportsTablet": true
     },
     "android": {
-      "package":"RateUs.in",
+      "package": "RateUs.in",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
@@ -28,6 +28,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "description": ""
   }
 }
